--- a/src/main/webapp/resources/html/datatest/index.html
+++ b/src/main/webapp/resources/html/datatest/index.html
@@ -19,6 +19,11 @@
     <link rel="stylesheet" href="resources/css/zTreeStyle/zTreeStyle.css" type="text/css">
     <link rel="stylesheet" href="resources/css/jsoneditor/dist/jsoneditor.min.css" type="text/css">
     <title ng-bind="settings.TITLE">Api接口管理系统</title>
+    <style>
+        .add {
+            background-position: -144px 0;
+        }
+    </style>
 </head>
 <body class="BG_COLOR">
 <div ng-include="'resources/html/subTpl/css.tpl.html'"></div>
@@ -36,7 +41,7 @@
 
 
         <!-- leftMenu -->
-        <div class="col-xs-2 col-sm-2 sidebar BGEEE p20 pt0 pb0 m0 min-h600">
+        <div class="col-xs-4 col-sm-4 sidebar BGEEE p20 pt0 pb0 m0 min-h600">
             <div>
                 <ul id="treeDemo" class="ztree"></ul>
             </div>
@@ -44,7 +49,7 @@
         <!-- End:leftMenu -->
 
 
-        <div class="col-xs-9 col-sm-10 p0 BG_COLOR m0 p10 pt0 r5">
+        <div class="col-xs-8 col-sm-8 p0 BG_COLOR m0 p10 pt0 r5">
             <div ng-controller="jsonController">
                 <div ng-jsoneditor ng-model="obj.data" options="obj.options" style="height: 500px;">
 
@@ -117,33 +122,107 @@
             $scope.obj.options.mode = 'code'
         }
     }])
-
-    var zTreeObj;
-    // zTree 的参数配置，深入使用请参考 API 文档（setting 配置详解）
+</SCRIPT>
+<SCRIPT type="text/javascript">
+    <!--
     var setting = {
+        view: {
+            addHoverDom: addHoverDom,
+            removeHoverDom: removeHoverDom,
+        },
         edit: {
             enable: true,
-            removeTitle: 'Delete',
+            editNameSelectAll: true,
             showRemoveBtn: true,
-            renameTitle: "Rename",
             showRenameBtn: true
+        },
+        data: {
+            simpleData: {
+                enable: true
+            }
+        },
+        callback: {
+            beforeEditName: beforeEditName,
+            beforeRemove: beforeRemove,
+            beforeRename: beforeRename,
+            onRemove: onRemove,
+            onRename: onRename
         }
     };
-    // zTree 的数据属性，深入使用请参考 API 文档（zTreeNode 节点数据详解）
-    var zNodes = [
-        {
-            name: "test1", open: true, children: [
-            {name: "test1_1"}, {name: "test1_2"}]
-        },
-        {
-            name: "test2", open: true, children: [
-            {name: "test2_1"}, {name: "test2_2"}]
-        }
-    ];
-    $(document).ready(function () {
-        zTreeObj = $.fn.zTree.init($("#treeDemo"), setting, zNodes);
-    });
 
+    var zNodes = [
+        {id: 1, pId: 0, name: "父节点 1", open: true},
+        {id: 11, pId: 1, name: "叶子节点 1-1"},
+        {id: 12, pId: 1, name: "叶子节点 1-2"},
+        {id: 13, pId: 1, name: "叶子节点 1-3"},
+        {id: 2, pId: 0, name: "父节点 2", open: true},
+        {id: 21, pId: 2, name: "叶子节点 2-1"},
+        {id: 22, pId: 2, name: "叶子节点 2-2"},
+        {id: 23, pId: 2, name: "叶子节点 2-3"},
+        {id: 3, pId: 0, name: "父节点 3", open: true},
+        {id: 31, pId: 3, name: "叶子节点 3-1"},
+        {id: 32, pId: 3, name: "叶子节点 3-2"},
+        {id: 33, pId: 3, name: "叶子节点 3-3"}
+    ];
+    var log, className = "dark";
+    function beforeEditName(treeId, treeNode) {
+        className = (className === "dark" ? "" : "dark");
+        showLog("[ " + getTime() + " beforeEditName ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+        zTree.selectNode(treeNode);
+        return confirm("进入节点 -- " + treeNode.name + " 的编辑状态吗？");
+    }
+    function beforeRemove(treeId, treeNode) {
+        className = (className === "dark" ? "" : "dark");
+        showLog("[ " + getTime() + " beforeRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+        zTree.selectNode(treeNode);
+        return confirm("确认删除 节点 -- " + treeNode.name + " 吗？");
+    }
+    function onRemove(e, treeId, treeNode) {
+        showLog("[ " + getTime() + " onRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
+    }
+    function beforeRename(treeId, treeNode, newName, isCancel) {
+        className = (className === "dark" ? "" : "dark");
+        showLog((isCancel ? "<span style='color:red'>" : "") + "[ " + getTime() + " beforeRename ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name + (isCancel ? "</span>" : ""));
+        if (newName.length == 0) {
+            alert("节点名称不能为空.");
+            var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+            setTimeout(function () {
+                zTree.editName(treeNode)
+            }, 10);
+            return false;
+        }
+        return true;
+    }
+    function onRename(e, treeId, treeNode, isCancel) {
+        showLog((isCancel ? "<span style='color:red'>" : "") + "[ " + getTime() + " onRename ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name + (isCancel ? "</span>" : ""));
+    }
+
+    var newCount = 1;
+    function addHoverDom(treeId, treeNode) {
+        var sObj = $("#" + treeNode.tId + "_span");
+        if (treeNode.editNameFlag || $("#addBtn_" + treeNode.tId).length > 0) return;
+        var addStr = "<span class='button add' id='addBtn_" + treeNode.tId
+                + "' title='add node' onfocus='this.blur();'></span>";
+        sObj.after(addStr);
+        var btn = $("#addBtn_" + treeNode.tId);
+        if (btn) btn.bind("click", function () {
+            var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+            zTree.addNodes(treeNode, {id: (100 + newCount), pId: treeNode.id, name: "new node" + (newCount++)});
+            return false;
+        });
+    }
+    ;
+    function removeHoverDom(treeId, treeNode) {
+        $("#addBtn_" + treeNode.tId).unbind().remove();
+    }
+    ;
+
+    $(document).ready(function () {
+        $.fn.zTree.init($("#treeDemo"), setting, zNodes);
+    });
+    //-->
 </SCRIPT>
 </body>
 </html>
